syntax = "proto3";

option go_package="/pb";

message AdCandidate{
  string id = 1;
  string lineItemId = 2;
}